--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -7,22 +7,9 @@
     margin: 0;
     padding: 0;
     background-color: #f2f2f2;
-  }
+}
   
-  /*
-  .login-page {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: #f2f2f2;
-    width: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-    */
-  
-  .login-page {
+.login-page {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -33,20 +20,18 @@
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  }
+}
 
-  
-  @keyframes typing {
+@keyframes typing {
     0% {
-      width: 0;
+        width: 0;
     }
     100% {
-      width: 100%;
+        width: 100%;
     }
-    
-  }
+}
   
-  .typing-text {
+.typing-text {
     font-family: 'Courier New', monospace;
     font-size: 36px;
     white-space: nowrap;
@@ -54,10 +39,10 @@
     display: inline-block;
     width: 0;
     border-right: 3px solid black;
-    animation: typing 5s steps(15) forwards; /* Adjust steps(8) to match the number of characters in "TaskyMy" */
-  }
+    animation: typing 5s steps(15) forwards;
+}
   
-.app-name{
+.app-name {
     color: #007bff;
 }
 
@@ -65,9 +50,40 @@
     color: black;
     font-weight: bold;
     text-decoration: none;
-  }
+}
   
 .login-page a:hover {
     text-decoration: underline;
-  }
+}
   
+@media only screen and (max-width: 600px) {
+    .typing-text {
+        font-size: 30px;
+        animation: typing-mobile 5s steps(15) forwards;
+    }
+  
+    @keyframes typing-mobile {
+        0% {
+            width: 0;
+        }
+        100% {
+            width: 88%;
+        }
+    }
+
+    .login-page {
+        background-color: #f2f2f2 !important;
+        box-shadow: none !important;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    @keyframes typing-mobile {
+        0% {
+            width: 0;
+        }
+        100% {
+            width: 90%;
+        }
+    }
+}
