--- a/src/app/pages/signup/signup.component.css
+++ b/src/app/pages/signup/signup.component.css
@@ -34,28 +34,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   }
-  @keyframes typing {
-    0% {
-      width: 0;
-    }
-    50% {
-      width: 100%;
-    }
-    100% {
-      width: 0;
-    }
-  }
   
-  .typing-text {
-    font-family: 'Courier New', monospace;
-    font-size: 36px;
-    white-space: nowrap;
-    overflow: hidden;
-    display: inline-block;
-    width: 0;
-    border-right: 3px solid black;
-    animation: typing 15s steps(20) infinite;
-  }
 .welcome {
     font-size: 30px;
 }
@@ -72,3 +51,10 @@
 .signup-page a:hover {
     text-decoration: underline;
   }
+
+@media only screen and (max-width: 600px) {
+    .signup-page {
+        background-color: #f2f2f2 !important;
+        box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+    }
+}
