Weather API integration and some enhancements

--- a/src/app/components/auth-form/auth-form.component.html
+++ b/src/app/components/auth-form/auth-form.component.html
@@ -1,7 +1,7 @@
 <div>
 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="main">
-    <div *ngIf="formError" class="form-error">
-      {{ formError }}
+    <div *ngIf="authError" class="form-error">
+      {{ authError }}
     </div>
 <div class="container">
     <div class="email">
