--- a/src/app/pages/signup/signup.component.css
+++ b/src/app/pages/signup/signup.component.css
@@ -1,8 +1,9 @@
+
 :host {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: auto;
     width: 100vw;
     margin: 0;
     padding: 0;
