--- a/src/styles.css
+++ b/src/styles.css
@@ -8,4 +8,4 @@ html, body {
   }
   
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #f2f2f2;}
